configuration_file/livefox/livefox-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-livefox
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: livefox-svc
          servicePort: 80
